--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FoodDonationOrg
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=/Users/kpsingh/Desktop/FoodDeliverySystem 2/AbsoluteLayout.jar
-file.reference.db4o-8.0.184.15484-all-java5.jar=/Users/kpsingh/Desktop/FoodDeliverySystem 2/db4o-8.0.184.15484-all-java5.jar
+file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar=db4o-8.0.184.15484-all-java5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
